# ota_design

./: .gitignore  Makefile  main.c  ota.h  partitions.csv  readme.md  readme.txt  sdkconfig.template
components/: CMakeLists.txt
components/ota/: CMakeLists.txt  ota.c
components/ota/esp32/: CMakeLists.txt  esp32.c
components/ota/esp32/include/: esp32.h
components/ota/include/: ota.h  ota_data.h  ota_template.h
components/station/: wifi_station.c
main/: CMakeLists.txt  main.c  wifi_station.h
ota/: ota.c  ota_data.c  ota_data.h
